# JobFinder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.kiro/specs/email-results-delivery/: .config.kiro  design.md  requirements.md  tasks.md
src/: app.py  auth.py  config_store.py  cv_parser.py  cv_profile.py  database.py  email_sender.py  job_scheduler.py  result_store.py  scheduler.py  scoring.py  setup_prompt.py  sponsors.py  tiers.py
tests/: conftest.py  test_app_pages.py  test_app_tiers.py  test_auth.py  test_config_store.py  test_cv.py  test_cv_profile.py  test_database.py  test_email_sender.py  test_job_scheduler.py  test_result_store.py  test_scheduler.py  test_scheduler_integration.py  test_scoring.py  test_search_page_preservation.py  test_search_page_user_id_bug.py  test_setup_prompt.py  test_sponsors.py
